changed the chillies paragraph

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <div class="skill-row">
             <img class="chillies-img" src="Images/chillies.png" alt="chillies-img">
             <h3>Hot Wings Challenge</h3>
-            <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+            <p>This challenge completely based on how the participant gets faster and faster on his typing skills and accuracy. There will be a limited time and the paragraphs are more. The winner gets the cash prize of 1000 dollars to his bank account immediately.</p>
           </div>
         </div>
         <hr>
